--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "a01-hello": "node --experimental-modules --experimental-specifier-resolution=node --trace-warnings src/tests/a01-hello.js",
-        "a02-calendar": "node --experimental-modules --experimental-specifier-resolution=node --trace-warnings src/tests/a02-calendar.js",
         "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-        "test": "echo \\\"Error: no test specified\\\" && exit 1"
+        "test": "node --experimental-modules --experimental-specifier-resolution=node --trace-warnings src/tests/index.js"
     },
     "repository": {
         "type": "git",
