--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "license": "AGPL-3.0-or-later",
     "devDependencies": {
         "prettier": "2.2.1"
+    },
+    "dependencies": {
+        "luxon": "^1.26.0"
     }
 }
