--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "prettier": "2.2.1"
     },
     "dependencies": {
-        "luxon": "^1.26.0"
+        "luxon": "^1.26.0",
+        "node-fetch": "^2.6.1"
     }
 }
