--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "author": "Felix Bertram",
     "license": "AGPL-3.0-or-later",
     "devDependencies": {
-        "prettier": "2.2.1"
+        "prettier": "2.2.1",
+        "jest": "^26.6.3"
     },
     "dependencies": {
         "luxon": "^1.26.0",
