--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
     "name": "turingtrader.js",
-    "version": "0.0.0",
+    "version": "0.0.1",
     "description": "A backtesting engine for Node.js",
     "main": "index.js",
     "type": "module",
     "scripts": {
         "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-        "test": "node --experimental-modules --experimental-specifier-resolution=node --trace-warnings src/tests/index.js"
+        "build": "npx babel src --out-dir dist",
+        "start": "npx babel src --watch --out-dir dist",
+        "test": "jest"
+    },
+    "jest": {
+        "collectCoverage": false
     },
     "repository": {
         "type": "git",
@@ -35,8 +40,12 @@
     "author": "Felix Bertram",
     "license": "AGPL-3.0-or-later",
     "devDependencies": {
-        "prettier": "2.2.1",
-        "jest": "^26.6.3"
+        "@babel/cli": "^7.14.5",
+        "@babel/core": "^7.14.6",
+        "@babel/plugin-transform-runtime": "^7.14.5",
+        "@babel/preset-env": "^7.14.7",
+        "jest": "^26.6.3",
+        "prettier": "2.2.1"
     },
     "dependencies": {
         "luxon": "^1.26.0",
