include Babel runtime

--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,19 @@
     "presets": [
         "@babel/preset-env"
     ],
+    "plugins": [
+        [
+            "@babel/plugin-transform-runtime",
+            {
+                "absoluteRuntime": false,
+                "corejs": false,
+                "helpers": true,
+                "regenerator": true,
+                "version": "7.0.0-beta.0"
+            }
+        ]
+    ]
+    /* as suggested by Jest
     "env": {
         "test": {
             "plugins": [
@@ -9,4 +22,5 @@
             ]
         }
     }
+    */
 }
