--- a/package.json
+++ b/package.json
@@ -44,12 +44,12 @@
         "@babel/core": "^7.14.6",
         "@babel/plugin-transform-runtime": "^7.14.5",
         "@babel/preset-env": "^7.14.7",
-        "jest": "^26.6.3",
-        "prettier": "2.2.1"
+        "jest": "^27.0.6",
+        "prettier": "^2.3.2"
     },
     "dependencies": {
         "@babel/runtime": "^7.14.6",
-        "luxon": "^1.26.0",
+        "luxon": "^2.0.1",
         "node-fetch": "^2.6.1"
     }
 }
