--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
     "name": "turingtrader.js",
-    "version": "0.0.14",
+    "version": "0.0.15",
     "description": "A backtesting engine for Node.js",
     "main": "dist/index.js",
     "scripts": {
         "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-        "build": "rmdir dist /q /s && npx babel src --out-dir dist",
+        "prebuild": "rimraf dist",
+        "build": "npx babel src --out-dir dist",
         "deploy": "npm publish",
         "start": "npx babel src --watch --out-dir dist",
         "test": "jest",
-        "test-single": "jest --testPathPattern=test-0705-",
+        "test-single": "jest --testPathPattern=test-0710-",
         "profile": "node --prof ./dist/profiling"
     },
     "jest": {
